# BotLabDynamics

./: .gitignore  CMakeLists.txt  README.md  TestCases.txt  build.bat  build.sh
src/: drone.cpp  dronefactory.cpp  dronesimulator.cpp  hoverstrategy.cpp  logger.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  movementstrategy.cpp  randomwalkstrategy.cpp  telemetrymodel.cpp
src/include/: drone.h  dronefactory.h  dronesimulator.h  hoverstrategy.h  logger.h  mainwindow.h  movementstrategy.h  randomwalkstrategy.h  telemetrymodel.h
